--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "an example of how to use playwright",
   "main": "src/index.js",
   "scripts": {
-    "start": "playwright test tests --headed"
+    "start": "playwright test e2e --headed"
   },
   "repository": {
     "type": "git",
@@ -24,10 +24,7 @@
     "url": "https://github.com/e2e-pipeline-workshop/automationstar-playwright-tests/issues"
   },
   "homepage": "https://github.com/e2e-pipeline-workshop/automationstar-playwright-tests#readme",
-  "dependencies": {
-    "@playwright/test": "1.16.3"
-  },
   "devDependencies": {
-    "nodemon": "1.18.4"
-  },
+    "@playwright/test": "^1.27.0"
+  }
 }
