ignore upload step

--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -25,5 +25,5 @@ jobs:
       - name: run the tests
         run: npx playwright test
 
-      - name: upload test reports
+      # - name: upload test reports
         # report ./playwright-report/index.html
