--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -2,9 +2,6 @@ name: Build and Test the Digibank
 run-name: Deploy to ${{ inputs.environment }} by @${{ github.actor }}
 
 on:
-  push:
-    branches:
-      - main
   workflow_dispatch:
     inputs:
       environment:
@@ -15,7 +12,10 @@ on:
         description: 'SUT (IP) to run tests against'
         type: string
         required: true 
-  
+
+env:
+  SUT: $ {{ inputs.SUT }}
+
 jobs:
   e2e-tests:
     runs-on: ubuntu-latest # or macos-latest, windows-latest
