--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -13,6 +13,9 @@ on:
         type: string
         required: true 
 
+env:
+  IP: "3.145.130.221"
+
 jobs:
   e2e-tests:
     runs-on: ubuntu-latest # or macos-latest, windows-latest
@@ -35,7 +38,7 @@ jobs:
 
       - name: run the tests
         if: ${{ inputs.SUT }}
-        run: SUT=http://3.145.130.221:8080/digibank/login npx playwright test
+        run: SUT="http://${{env.IP}}:8080/digibank/login" npx playwright test
 
       # - name: upload test reports
         # report ./playwright-report/index.html
