--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -40,12 +40,14 @@ jobs:
         if: ${{ inputs.SUT }}
         run: SUT="http://${{env.IP}}:8080/digibank/login" npx playwright test
 
-      - uses: actions/upload-artifact@master
+      - if: always()
+        uses: actions/upload-artifact@master
         with:
           name: test-report.html
           path: ./playwright-report/index.html
 
-      - name: copy file via ssh password
+      - if: always()
+        name: copy file via ssh password
         uses: appleboy/scp-action@master
         with:
           host: ${{ env.IP }}
