--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -1,5 +1,5 @@
 name: Build and Run e2e tests
-run-name: Deploy to ${{ inputs.sut }} trigger via ${{ github.event_name }} by @${{ github.actor }}
+run-name: Deploy to ${{ inputs.sut }} trigger via >${{ github.event_name }}< by @${{ github.actor }}
 
 on:
   repository_dispatch:
@@ -15,17 +15,18 @@ on:
         description: 'Testsystem IP address'
         required: true
 
+env: 
+  SUT: $ {{ inputs.sut }}
+  
 jobs:
   e2e-tests:
     runs-on: ubuntu-latest # or macos-latest, windows-latest
 
     steps:
       - uses: actions/checkout@v3
-      - name: Dump context
-        uses: crazy-max/ghaction-dump-context@v2
         
       - name: Check IP
-        run: echo ${{ github.event.client_payload.sut }}
+        run: echo ${{ env.SUT }}
 
       - uses: actions/setup-node@v3
         with:
@@ -41,7 +42,7 @@ jobs:
         run: npx playwright install
 
       - name: run the tests
-        run: SUT="http://${{ github.event.client_payload.sut }}:8080/digibank/login" npx playwright test
+        run: SUT="http://${{ env.SUT }}:8080/digibank/login" npx playwright test
              
       - if: always()
         uses: actions/upload-artifact@master
