--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -16,7 +16,7 @@ on:
         required: true
 
 env: 
-  SUT: $ {{ inputs.sut }}
+  SUT: ${{ inputs.sut }}
   
 jobs:
   e2e-tests:
@@ -26,7 +26,7 @@ jobs:
       - uses: actions/checkout@v3
         
       - name: Check IP
-        run: echo ${{ env.SUT }}
+        run: echo "${{ env.SUT }}"
 
       - uses: actions/setup-node@v3
         with:
