--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -1,5 +1,5 @@
 name: Build and Run e2e tests
-run-name: Deploy to ${{ inputs.sut }} trigger via >${{ github.event_name }}< by @${{ github.actor }}
+run-name: Deploy to ${{ github.event.client_payload.sut }} trigger via >${{ github.event_name }}< by @${{ github.actor }}
 
 on:
   repository_dispatch:
@@ -9,14 +9,8 @@ on:
         description: 'Testsystem IP address'
         required: true
         
-  workflow_dispatch:
-    inputs: 
-      sut: 
-        description: 'Testsystem IP address'
-        required: true
-
 env: 
-  SUT: ${{ inputs.sut }}
+  SUT: ${{ github.event.client_payload.sut }}
   
 jobs:
   e2e-tests:
